--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,15 +8,17 @@ espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.9.1"
 activityCompose = "1.10.1"
 composeBom = "2024.09.00"
-tensorflowLiteSupport = "0.3.0"
-tensorflowLiteMetadata = "0.2.0"
+tensorflowLiteSupport = "0.5.0"
+tensorflowLiteMetadata = "0.5.0"
 tensorflowLiteGpu = "2.3.0"
 google-auth = "21.0.0"
 google-api-client = "1.34.0"
 google-drive-api = "v3-rev202-1.25.0"
+tracingPerfetto = "1.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-tracing-perfetto = { module = "androidx.tracing:tracing-perfetto", version.ref = "tracingPerfetto" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
